IntegerSocket+Material view crashes blender. #51687

Closed
opened 2017-06-01 01:11:28 +02:00 by Ray molenkamp · 11 comments
Member

System Information
Win7 (but it's irrelevant, all builds should do this)

Blender Version
Broken: latest master
Worked: (optional)

Short description of error
When you add an integer socket to a cycles node-group, cycles is happy with it and it functions properly , however when you switch to the material view, blender instantly disappears with an access violation.

Exact steps for others to reproduce the error
Open the attached blend, switch to material view
MaterialViewCrash.blend

I'm pretty sure this will end up in the 'not supported, don't do that' pile, but still it would be nice if we at-least not punish the user with an instant crash when this happens

**System Information** Win7 (but it's irrelevant, all builds should do this) **Blender Version** Broken: latest master Worked: (optional) **Short description of error** When you add an integer socket to a cycles node-group, cycles is happy with it and it functions properly , however when you switch to the material view, blender instantly disappears with an access violation. **Exact steps for others to reproduce the error** Open the attached blend, switch to material view [MaterialViewCrash.blend](https://archive.blender.org/developer/F614718/MaterialViewCrash.blend) I'm pretty sure this will end up in the 'not supported, don't do that' pile, but still it would be nice if we at-least not punish the user with an instant crash when this happens
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo

Added subscriber: @Secrop

Added subscriber: @Secrop

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the crash, for some reason node_get_stack() returns NULL bNodeStack pointer for those integer sockets... :|

Can confirm the crash, for some reason `node_get_stack()` returns NULL bNodeStack pointer for those integer sockets... :|

Added subscriber: @Sergey

Added subscriber: @Sergey

OK, this boils down to node_exec_socket_use_stack() in node_exec.c not knowing about SOCK_INT socket type…

@Sergey not sure what's best here? support integer sockets (which could easily be converted to float values)? Forbid creation of such sockets in shader tree (if possible)? Or just make gpu_stack_from_data_list() NULL-checking the bNodeStack pointers? Later solution seams most straight forward to me…

OK, this boils down to `node_exec_socket_use_stack()` in node_exec.c not knowing about `SOCK_INT` socket type… @Sergey not sure what's best here? support integer sockets (which could easily be converted to float values)? Forbid creation of such sockets in shader tree (if possible)? Or just make `gpu_stack_from_data_list()` NULL-checking the `bNodeStack` pointers? Later solution seams most straight forward to me…

simply adding SOCK_INT to the node_exec_socket_use_stack() fixes this..
...
return ELEM(sock->type, SOCK_INT, SOCK_FLOAT, SOCK_VECTOR, SOCK_RGBA, SOCK_SHADER);
...

simply adding SOCK_INT to the node_exec_socket_use_stack() fixes this.. ... return ELEM(sock->type, SOCK_INT, SOCK_FLOAT, SOCK_VECTOR, SOCK_RGBA, SOCK_SHADER); ...
Bastien Montagne self-assigned this 2017-06-01 12:18:39 +02:00

Adding SOCK_INT here won't be enough, might work in that specific case but will break in others, unless you also define conversions rules etc.

For now will commit some code to make GPU evaluation of nodetree resilient to unknown/unsupported socket types. Would consider adding support of Integer sockets here as a nice and (probably) easy TODO.

Adding SOCK_INT here won't be enough, might work in that specific case but will break in others, unless you also define conversions rules etc. For now will commit some code to make GPU evaluation of nodetree resilient to unknown/unsupported socket types. Would consider adding support of Integer sockets here as a nice and (probably) easy TODO.

This issue was referenced by 528ae8885e

This issue was referenced by 528ae8885ebb8a2eebbc6726af3950ca4db38665

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51687
No description provided.