Fix T51687: GPUmat evaluation of shader tree would crash uppon unknown/unsupported socket types.

Made this resilient to unknown types, for now. Supporting specific INT
sockets (through implicit conversion to GPU_FLOAT ones) is considered nice TODO.